Mobile nav alignment fix

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -21,7 +21,7 @@
   align-items: center;
   justify-content: center;
   flex-grow: 1;
-  padding: 40px 0;
+  padding: 1rem 0;
 }
 
 .video {
